@@ -33,42 +33,42 @@ class <%= controller_class_name %>ControllerTest < Test::Unit::TestCase
   end
 
   def test_should_allow_signup
-    old_count = <%= class_name %>.count
-    create_<%= file_name %>
-    assert_response :redirect
-    assert_equal old_count+1, <%= class_name %>.count
+    assert_difference <%= class_name %>, :count do
+      create_<%= file_name %>
+      assert_response :redirect
+    end
   end
 
   def test_should_require_login_on_signup
-    old_count = <%= class_name %>.count
-    create_<%= file_name %>(:login => nil)
-    assert assigns(:<%= file_name %>).errors.on(:login)
-    assert_response :success
-    assert_equal old_count, <%= class_name %>.count
+    assert_no_difference <%= class_name %>, :count do
+      create_<%= file_name %>(:login => nil)
+      assert assigns(:<%= file_name %>).errors.on(:login)
+      assert_response :success
+    end
   end
 
   def test_should_require_password_on_signup
-    old_count = <%= class_name %>.count
-    create_<%= file_name %>(:password => nil)
-    assert assigns(:<%= file_name %>).errors.on(:password)
-    assert_response :success
-    assert_equal old_count, <%= class_name %>.count
+    assert_no_difference <%= class_name %>, :count do
+      create_<%= file_name %>(:password => nil)
+      assert assigns(:<%= file_name %>).errors.on(:password)
+      assert_response :success
+    end
   end
 
   def test_should_require_password_confirmation_on_signup
-    old_count = <%= class_name %>.count
-    create_<%= file_name %>(:password_confirmation => nil)
-    assert assigns(:<%= file_name %>).errors.on(:password_confirmation)
-    assert_response :success
-    assert_equal old_count, <%= class_name %>.count
+    assert_no_difference <%= class_name %>, :count do
+      create_<%= file_name %>(:password_confirmation => nil)
+      assert assigns(:<%= file_name %>).errors.on(:password_confirmation)
+      assert_response :success
+    end
   end
 
   def test_should_require_email_on_signup
-    old_count = <%= class_name %>.count
-    create_<%= file_name %>(:email => nil)
-    assert assigns(:<%= file_name %>).errors.on(:email)
-    assert_response :success
-    assert_equal old_count, <%= class_name %>.count
+    assert_no_difference <%= class_name %>, :count do
+      create_<%= file_name %>(:email => nil)
+      assert assigns(:<%= file_name %>).errors.on(:email)
+      assert_response :success
+    end
   end
 
   def test_should_logout
