@@ -1,13 +1,20 @@
-* (22 Jan 2005)
+* (20 May 2006)
+
+  New for Rails 1.1!
+
+  Added #assert_difference and #assert_no_difference test helpers
+  Changed signup form to use #form_for
+
+* (22 Jan 2006)
 
   Fixed user validations
   Fixed Migration table name
 
-* (19 Jan 2005)
+* (19 Jan 2006)
 
   Fixed generator erb bug [Kyle Maxwell]
 
-* (18 Jan 2005)
+* (18 Jan 2006)
 
   Fixed bug with password field adding validation errors [Chris Nolan]
   Added persistent login example [Chris Nolan]
